[tool.poetry]
name = "super-tic-tac-toe"
version = "0.1.0"
description = "A game of Super Tic-tac-toe"
authors = ["trumully <truman.mulholland@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
